# yopsBackend

./: .env.example  docker-compose.yml  nginx.conf  pyproject.toml
certs/: fullchain.pem  privkey.pem
certs2/: fullchain.pem  privkey.pem
core/: settings.py
src/: Dockerfile  pyproject.toml  stderr.txt  wsgi-entrypoint.sh
src/core/: celery.py  settings.py  urls.py
src/orders/: admin.py  deployment_services.py  models.py  permissions.py  serializers.py  tasks.py  views.py
src/orders/migrations/: 0001_initial.py  0002_serverlocation_baseprice.py  0003_rename_baseprice_serverlocation_solar.py  0004_order_create_at_order_update_at.py  0005_orderstatuses_payment_order_status.py  0006_remove_order_status_delete_orderstatuses_and_more.py  0007_alter_order_status.py  0008_order_payment.py  0009_configkey_orderoutline.py  0010_order_services.py
src/orders/scripts/: install-docker  install-nextcloud  outline-install-helper
src/users/: admin.py  apps.py  models.py
src/users/migrations/: 0001_initial.py  0002_alter_customuser_options.py
